@@ -337,6 +337,12 @@ int db_input_wrapper(char* buf, int max_size, int db)
 	fseek(*db_filep,0L,SEEK_SET);
 	*db_gzp=gzdopen(fileno(*db_filep),"rb");
 	c=gzgetc(*db_gzp);
+	error(255,"First character after gzip header is: %c(%#X)\n",c,c);
+  if(c==-1) {
+    int xx;
+	  error(0,"Error reading gzipped file: %s\n",gzerror(*db_gzp,&xx));
+    abort();
+  }
       }else {
 	/* False alarm */
 	ungetc(c,*db_filep);
